查找部分补充

--- a/408数据结构/Note/查找.md
+++ b/408数据结构/Note/查找.md
@@ -2,13 +2,14 @@
 
 - 查找:在数据集合中寻找满足某种条件的数据元素的过程
 - 查找表:用于查找的数据集合
-- 静态查找表和动态查找表:若一个查找表的操作只涉及查找操作,则无须动态地修改查找表,此类查找表称为静态查找表(适合静态查找表的有顺序查找、折半查找和散列查找).与此对应,需要动态地插入或删除的查找表称为动态查找表(适合动态查找表的有二叉排序树 BST、 二叉平衡树 AVL、B 树和 B+树).
+- 静态查找表:若一个查找表的操作只涉及查找操作,则 **无须动态地修改查找表**,此类查找表称为静态查找表(适合静态查找表的有顺序查找、折半查找和散列查找).
+- 动态查找表:需要**动态地插入或删除的查找表称为动态查找表**(适合动态查找表的有二叉排序树 $BST$、 二叉平衡树 $AVL$、$B$ 树和 $B+$ 树).
 - 关键字:数据元素中唯一标识该元素的某个数据项的值
-- **平均查找长度**:在查找过程中,一次查找的长度是指需要比较的关键字次数,而平均查找长度则是所有查找过程中进行关键字的比较次数的平均值,其数学定义为
+- **平均查找长度**:在查找过程中,一次查找的长度是指需要比较的关键字次数,而 <font color="red">平均查找长度则是所有查找过程中进行关键字的比较次数的平均值</font> ,其数学定义为
   $$
       ASL=\sum_{i=1}^n P_iC_i
   $$
-  其中:$n$是查找表中数据元素的个数,$P_i$是查找第$i$个元素的概率(无权时认为每个元素等概率出现,即对应$P_i=\dfrac{1}{n}$),$C_i$是查找第$i$个元素需要比较的次数.使用不同的查找算法,求得的 $ASL$ 也会不同.$ASL$ 具体分为查找成功和查找失败两种情况:
+  其中: $n$ 是查找表中数据元素的个数,$P_i$ 是查找第 $i$ 个元素的概率(无权时认为每个元素等概率出现,即对应 $P_i=\dfrac{1}{n}$),$C_i$ 是查找第 $i$ 个元素需要比较的次数.使用不同的查找算法,求得的 $ASL$ 也会不同.$ASL$ 具体分为查找成功和查找失败两种情况:
   $$
     \mathrm{ASL}_{\mathrm{succ}}=\frac{\text{总关键字比较次数}}{\text{查找元素个数}}
   $$
@@ -71,6 +72,7 @@ $$
 - 折半查找的过程可用二叉树来描述,被称为判定树.显然该判定树是一个二叉树.该二叉树的形状取决于折半策略,根据向上取整或者向下取整策略的不同可形成不同的二叉树
   <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240604163727.png" width = 80%/></div>
   <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605151222.png" width = 80%/></div>
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240817193257.png" width = 80%/></div>
 
 ### <font color="red">代码</font>
 
@@ -99,26 +101,42 @@ int binarySearch(int start, int end, int key)
 ### 性能分析
 
 - 用折半查找法查找到给定值的比较次数最多不会超过树的高度,等概率查找时,查找成功的平均查找长度为:
+
   $$
-    \mathrm{ASL}=\dfrac{1}{n}\sum_{i=1}^{n}l_{i}=\dfrac{1}{n}(1\times1+2\times2+\cdots+h\times2^{h-1})=\dfrac{n+1}{n}\mathrm{log}_{2}(n+1)-1\approx\mathrm{log}_{2}(n+1)-1
+    \mathrm{ASL}_{succ}=\dfrac{1}{n}\sum_{i=1}^{n}l_{i}=\dfrac{1}{n}(1\times1+2\times2+\cdots+h\times2^{h-1})=\textcolor{red}{\dfrac{n+1}{n}\mathrm{log}_{2}(n+1)-1\approx\mathrm{log}_{2}(n+1)-1}
   $$
-  $h$是树的高度,并且元素个数为$n$时树高$h=\left\lceil\log_2(n+1)\right\rceil$.所以,折半查找的时间复杂度为$O(\log_2n)$平均情況下比顺序查找的效率高.
-- 对于一棵有 n 个关键字的二叉排序树来说,查找失败的结点有 $n+1$ 个
-  ![20240605151611](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605151611.png)
+
+  $h$ 是树的高度,并且元素个数为 $n$ 时树高 <font color="red">$h=\left\lceil\log_2(n+1)\right\rceil$</font>.所以,折半查找的时间复杂度为 $O(\log_2n)$ 平均情況下比顺序查找的效率高.
+
+- <font color="red">对于一棵有 $n$ 个关键字的二叉排序树来说,查找失败的结点有 $n+1$ 个</font>
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605151611.png" width = 80%/></div>
 
 ## 分块查找
 
 ### 定义
 
-- 分块查找又称**索引顺序查找**,它吸取了顺序查找和折半查找冬自的优点,既有动态结构,又适于快速查找.
-- 分块查找的基本思想:将查找表分为若干子块、块内的元素可以无序,但块间的元素是有序的,即第一个块中的最大关键字小于第二个块中的所有记录的关键字
+- 分块查找又称 <font color="red">索引顺序查找</font>,<font color="#00008B">它吸取了顺序查找和折半查找各自的优点,既有动态结构,又适于快速查找.</font>
+- 分块查找的基本思想:<font color="red">将查找表分为若干子块、块内的元素可以无序,但块间的元素是有序的</font>,即第一个块中的最大关键字小于第二个块中的所有记录的关键字
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240816163645.png" width = 80%/></div>
+
+### 代码
+
+```c++{.line-numbers}
+//索引表
+typedef struct{
+    ElemType maxvalue;
+    int low,high;
+}Index;
+//顺序表存储实际元素
+ElemType SqList[10];
+```
 
 ### 性能分析
 
 分块查找的平均查找长度为索引查找和块内查找的平均长度之和.设索引查找和块内查找的平均查找长度分别为 $L_\mathrm{l}$和 $L_\mathrm{S}$,则分块查找的平均查找长度为
 
 $$
-  ASL= L_{\mathrm{i} }+ L_{\mathrm{S} }
+  ASL= L_{\mathrm{i} }+L_{\mathrm{S}}
 $$
 
 将长度为$n$的查找表均匀地分为$b$块,每块有 $s$个记录,在等概率情况下,若在块内和索引表中均采用顺序查找,则平均查找长度为
@@ -127,7 +145,7 @@ $$
   \mathrm{ASL}=L_i+L_\mathrm{S}=\frac{b+1}{2}+\frac{s+1}{2}=\frac{s^2+2s+n}{2s}
 $$
 
-此时,若 $s=\sqrt{n}$,则平均查找长度取最小值$\sqrt{n}+1$
+此时,<font color="red">若 $s=\sqrt{n}$,则平均查找长度取最小值$\sqrt{n}+1$, 因此应该分为 $\sqrt{n}$ 块进行查找</font>
 
 # [树形查找](树.md#树型查找)
 
@@ -138,12 +156,13 @@ $$
 ## 基本概念
 
 - 散列函数(也称哈希函数):一个把查找表中的关键字映射成该关键字对应的地址的函数,记为 `Hash(key)=Addr`(这里的地址可以是数组下标、索引或内存地址等).
-- 冲突和同义词:对不同的关键字进行散列计算可能得到同一散列地址,即 $\mathrm{key}_1\neq\mathrm{key}_2$,而 $H(\mathrm{key}_1)=H(\mathrm{key}_2)$,这种现象称为冲突.具有相同函数值的关键字对该散列函数来说称为同义词,$\mathrm{key}_1$与$\mathrm{key}_1$互为同义词.
+- **冲突**和同义词:对不同的关键字进行散列计算可能得到同一散列地址,即 $\mathrm{key}_1\neq\mathrm{key}_2$,而 $H(\mathrm{key}_1)=H(\mathrm{key}_2)$,这种现象称为冲突.具有相同函数值的关键字对该散列函数来说称为同义词,$\mathrm{key}_1$与$\mathrm{key}_1$互为同义词.
 - 散列表(也称哈希表):根据关键字而直接进行访问的数据结构.
-- 装填因子 $\alpha$ :装填因子标志散列表的装满程度.
+- **装填因子** $\alpha$ :装填因子标志散列表的装满程度.
   $$
      \alpha = \dfrac{表中填入的数据元素个数}{散列表的长度}
   $$
+  直观上看，$\alpha$ 越大代表散列表装填的越满，发生冲突的可能性就越大；反之发生冲突的可能性则越小。
 
 ## 散列函数构造函数
 
@@ -201,7 +220,7 @@ bool IsExist(int x)
 
 ### 开放定址法
 
-![20240605142918](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605142918.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605142918.png" width = 60%/></div>
 
 开放定址法(也叫开放地址法)会把所有数据元素都存放在散列表中,当关键字散列到的地址单元已经被另外一个关键字占用的时候,就会使用某种方法尝试在地址空间中寻找其他的单元,直到找到一个空置单元.数学公式为:
 
@@ -210,10 +229,10 @@ $$
 $$
 
 式中,$H(\mathrm{key})$为散列函数; $i=1,2,\cdots,k(k\leq m-1);m$ 表示散列表表长; $d_i$ 为增量序列.
-以下为 4 种增量序列的取法:
+以下为 **4 种增量序列的取法** :
 
-- 线性探测法,又称线性探测再散列法.$d_i=1,2,\cdots,m-1$它的特点是:冲突发生时,顺序查看表中下一个单元(探测到表尾地址 $m-1$时,下一个探测地址是表首地址 0 ),直到找出一个空闲单元(当表未填满时一定能找到一个空闲单元)或查遍全表.
-- 平方探测法,又称二次探测法.$d_i=1^2,-1^2,2^2,-2^2,\cdots,k^2,-k^2$,其中$k\leq m/2$,散列表长度$m$必须是一个可以表示成$4k+3$的素数
+- **线性探测法,又称线性探测再散列法**. $d_i=1,2,\cdots,m-1$ 它的特点是:冲突发生时,**顺序查看表中下一个单元**(探测到表尾地址 $m-1$时,下一个探测地址是表首地址 0 ),直到找出一个空闲单元(当表未填满时一定能找到一个空闲单元)或查遍全表.
+- **平方探测法,又称二次探测法**.$d_i=1^2,-1^2,2^2,-2^2,\cdots,k^2,-k^2$,其中$k\leq m/2$,散列表长度$m$必须是一个可以表示成$4k+3$的素数。加一放不进去减一，减一放不进去加四，加四放不进去减四。
 - 双散列法,$d_i=i \times \text{Hash}_2(\text{key})$.需要使用两个散列函数,当通过第一个散列函数 $\text{H(key)}$ 得到的地址发生冲突时,则利用第二个散列函数 $\text{Hash}_{2}\text{(key)}$ 计算该关键字的地址增量.它的具体散列函数形式如下：
   $$
     H_{i}=\left(H(\mathrm{key})+i \times \mathrm{Hash}_{2}(\mathrm{key})\right)\%m
@@ -255,7 +274,8 @@ bool IsExist(int x)
 
 ### 链地址法
 
-![20240605142731](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605142731.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240605142731.png" width = 80%/></div>
+
 代码如下:
 
 ```c++{.line-numbers}
@@ -288,6 +308,29 @@ bool IsExist(int x)
 
 ## 散列表性能分析
 
-- 散列表的查找效率取决于三个因素:散列函数,处理冲突的方法和装填因子.
-- 散列表的平均查找长度依赖于散列表的装填因子 $\alpha$ ,而不直接依赖于 $n$ 或 $m$.
+- <font color="red">散列表的查找效率取决于三个因素:散列函数,处理冲突的方法和装填因子.</font>
+- <font color="red">散列表的平均查找长度依赖于散列表的装填因子 $\alpha$ </font> ,而不直接依赖于 $n$ 或 $m$.
 - 虽然散列表在关键字与记录的存储位置之间建立了直接映像,但由于"冲突"的产生, 使得散列表的查找过程仍然是一个给定值和关键字进行比较的过程。因此,仍然需要以平均查找长度作衡量散列表的查找效率的度量
+- $ASL_{成功}=\dfrac{查找成功时各个关键字的查找长度之和}{关键字个数}$
+
+- 线性探测法的平均查找长度是：
+  $$\begin{aligned}&\mathbf{S}_{\mathrm{nl}\text{成功}}\approx\frac12\times(1+\frac1{1-\alpha})\\&\mathbf{S}_{\mathrm{nl}\text{失败}}\approx\frac12\times(1+\frac1{(1-\alpha)^2})\end{aligned}$$
+
+- 二次探测、伪随机探测、再哈希法的平均查找长度是：
+
+  $$
+  \mathbf{S}_{\mathrm{nl}\text{成功}}\approx-\frac1\alpha\times\ln(1-\alpha)
+  \\
+  \mathbf{S_{nl\text{失败}}}\approx\frac1{1-\alpha}
+  $$
+
+- 用链地址法解决冲突的平均查找长度是：
+
+  $$
+  \begin{aligned}\mathbf{S}_\text{nl成功}{\approx}&1+\frac\alpha2
+  \\
+  \mathbf{S}_\text{nl失败}{\approx}\alpha{\approx}&\alpha+\mathrm{e}^{-\alpha}\end{aligned}
+  $$
+
+- 易错总结
+  - 错误的认为开放寻址法在冲突时一直往后，在前面都满的时候才会往后。
